--- a/app/src/main/res/layout/round_trip.xml
+++ b/app/src/main/res/layout/round_trip.xml
@@ -22,6 +22,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="50dp"
             android:text="@string/LBL_REPEAT"
+            android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
