--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -264,7 +264,9 @@
             android:text="@string/shownotes"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tripspeedTxt"
+            app:layout_constraintVertical_bias="0.869" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
