--- a/app/src/main/res/layout/dialog_notifier.xml
+++ b/app/src/main/res/layout/dialog_notifier.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +21,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:text="@string/tripTitle" />
+                android:text="@string/tripTitle"
+                android:textColor="@color/purple_500"
+                android:textSize="23dp"/>
 
             <TextView
                 android:id="@+id/callType"
@@ -28,15 +31,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-10dp"
                 android:padding="5dp"
+                android:textColor="@color/teal_200"
                 android:text="@string/tripDestination" />
         </LinearLayout>
 
 
         <ImageView
             android:id="@+id/photo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/trip" />
+            android:layout_width="81dp"
+            android:layout_height="47dp"
+            android:src="@drawable/trip"
+            android:layout_margin="5dp" />
 
     </LinearLayout>
 
@@ -45,7 +50,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingStart="5dp"
-        android:paddingEnd="5dp">
+        android:paddingEnd="5dp"
+        android:padding="10dp">
 
         <Button
             android:id="@+id/btnDecline"
