--- a/app/src/main/res/layout/history_cell_row.xml
+++ b/app/src/main/res/layout/history_cell_row.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card"
+<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
     card_view:cardElevation="25dp"
     card_view:cardCornerRadius="10dp"
     card_view:shapeAppearance="@color/purple_200"
-    card_view:strokeColor="@color/colorPrimary"
-
+    android:layout_columnWeight="1"
+    android:layout_rowWeight="1"
+    android:backgroundTint="@color/white"
     android:theme="@style/Theme.MaterialComponents.Light"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     >
 
     <LinearLayout
@@ -25,7 +25,8 @@
         <ImageView
             android:id="@+id/destinationImage"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="5dp"
             android:contentDescription="@string/content_description_media"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/trip" />
@@ -34,33 +35,69 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="6dp">
+            android:paddingLeft="15dp"
+            android:paddingTop="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="5dp">
 
-            <!-- Title, secondary and supporting text -->
-            <TextView
-                android:id="@+id/titleTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tripTitle"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:orientation="horizontal">
+
+                <!-- Title, secondary and supporting text -->
+                <TextView
+                    android:id="@+id/titleTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="Triptitle"
+                    android:textColor="@color/teal_200"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintEnd_toStartOf="@+id/tripType"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    card_view:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/tripType"
+
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+
+                    android:background="@drawable/ic_oneway"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="RtlCompat" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/secondaryTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="@string/tripSource"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
+                android:text="source"
+                android:drawableLeft="@drawable/ic_source"
+
                 android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary" />
+                android:textColor="@color/purple_500" />
 
             <TextView
                 android:id="@+id/supportingText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:text="@string/tripDestination"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="destination"
+                android:drawableLeft="@drawable/ic_destination"
+
                 android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary" />
+                android:textColor="@color/purple_200" />
+
+
 
         </LinearLayout>
 
@@ -68,29 +105,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:orientation="horizontal">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/actionDetails"
-
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginEnd="20dp"
-
-                android:background="@drawable/ic_details"
-                tools:ignore="RtlCompat" />
+            android:gravity="end"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textAlignment="viewEnd">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/actionDelete"
 
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/ic_delete" />
 
-                android:background="@drawable/ic_delete"
-                />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/actionDetails"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/ic_details"
+                tools:ignore="RtlCompat" />
+
         </LinearLayout>
 
     </LinearLayout>
 
-</com.google.android.material.card.MaterialCardView>
+</androidx.cardview.widget.CardView>
