--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -60,7 +60,6 @@
             android:text="@string/okbtn"
             android:textAllCaps="false"
             android:textSize="15dp"
-            app:layout_constraintBottom_toBottomOf="@+id/shownotesBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tripspeedTxt" />
 
@@ -271,4 +270,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
