--- a/app/src/main/res/layout/dialog_notifier.xml
+++ b/app/src/main/res/layout/dialog_notifier.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="130dp"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:backgroundTint="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,8 +22,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:text="@string/tripTitle"
-                android:textColor="@color/purple_500"
-                android:textSize="23dp"/>
+                android:textColor="@color/purple_500"/>
 
             <TextView
                 android:id="@+id/callType"
@@ -50,8 +49,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:padding="10dp">
+        android:paddingEnd="5dp">
 
         <Button
             android:id="@+id/btnDecline"
