--- a/app/src/main/res/layout/trip_cell.xml
+++ b/app/src/main/res/layout/trip_cell.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -45,6 +46,7 @@
                 app:layout_constraintTop_toTopOf="@+id/cbSelected">
 
                 <TextView
+
                     android:id="@+id/tvSource"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
